# nixup

./: .golangci.yml  Cargo.toml  LICENSE  README.md  Taskfile.yml  flake.nix  go.mod  go.sum  main.go  rustfmt.toml
.github/workflows/: golangci-lint.yml  goreleaser.yml
cmd/: nixup.go  root.go  types.go  version.go
flags/: flags.go
internal/colors/: colors.go
internal/errors/: errors.go
internal/features/: commands.go
internal/ui/: confirm.go  huh.go  spinner.go  titleMaker.go
internal/utils/: colors.go  commands.go  errors.go  getUser.go  runCommand.go  sleep.go  terminal.go  titleMaker.go  whoami.go
src/: app.rs  init.rs  main.rs
src/utils/: colors.rs  commands.rs  mod.rs  tools.rs
ui/: confirm.go  spinner.go
utils/: colors.go  commands.go  executeCommand.go  getHostname.go
vhs/: nixup.tape
