[package]
name = "nixup"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
clap_complete = "4.5.1"
color-print = "0.3.5"
dialoguer = "0.11.0"
nix = { version = "0.28.0", features = ["user"] }
whoami = "1.5.1"
